# ECE421_projects

./: .gitignore  Cargo.toml  README  README - Shortcut.lnk  README.md  setup  sources
backend/: Cargo.toml
backend/src/: cli.rs  connect4.rs  main.rs  toot_otto.rs
proj3connectgame/connect4/: Cargo.toml  LICENSE_MIT
proj3connectgame/connect4 - before adding old content/: README copy.md  README.md
proj3connectgame/connect4 - before adding old content/www/: package.json
proj3connectgame/connect4/src/: lib.rs
proj3connectgame/connect4/www/: index old.html  index.js
src/: main.rs
stock_monitor/: Cargo.toml  README copy  README.md  plot.html  readme
stock_monitor/src/: main.rs
trees/: Cargo.toml  README.md  lib_for_avl.rs  rotate.rs
trees/benches/: my_benchmark.rs
trees/benches_avltree/: my_benchmark.rs
trees/benches_bst_compare/: my_benchmark.rs
trees/benches_rbtree/: my_benchmark.rs
trees/report/: benchmark charts.xlsx  benchmark print outs.docx  report - Copy.docx  report.docx
trees/src/: lib.rs  main.rs
yew-app/: .gitignore  Cargo.toml  index.html  styles.scss
yew-app/report/: report ECE 421 Project 3.docx
yew-app/src/: connect4.rs  main.rs  main2.rs  main3.rs  toot_otto.rs
