[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# yew = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2"
rand = "0.8"
log = "0.4"
yew-router = { git = "https://github.com/yewstack/yew.git" }
lazy_static = "1.4.0"